debezium/dbz#2101 Adopt Blaze-Persistence entity views for host deployment and extend AbstractService
Signed-off-by: divyanshu_Kumar <154233802+d1vyanshu-kumar@users.noreply.github.com>